--- a/keystore.properties.template
+++ b/keystore.properties.template
@@ -1,5 +1,5 @@
 # =============================================================================
-# QR-SHIELD Android Keystore Configuration
+# Mehr Guard Android Keystore Configuration
 # =============================================================================
 #
 # IMPORTANT: This is a TEMPLATE file. Never commit real keystore credentials!
@@ -7,35 +7,35 @@
 # To create a release keystore:
 # 1. Generate a keystore:
 #    keytool -genkeypair -v \
-#      -keystore qrshield-release.jks \
+#      -keystore mehrguard-release.jks \
 #      -keyalg RSA \
 #      -keysize 2048 \
 #      -validity 10000 \
-#      -alias qrshield
+#      -alias mehrguard
 #
 # 2. Copy this file to 'keystore.properties' (git-ignored)
 # 3. Fill in your actual values
 #
 # For GitHub Actions CI/CD:
 # 1. Base64 encode your keystore:
-#    base64 -i qrshield-release.jks | tr -d '\n' > keystore-base64.txt
+#    base64 -i mehrguard-release.jks | tr -d '\n' > keystore-base64.txt
 #
 # 2. Add these secrets to your repository:
 #    - ANDROID_KEYSTORE_BASE64: Contents of keystore-base64.txt
 #    - KEYSTORE_PASSWORD: Your keystore password
-#    - KEY_ALIAS: qrshield (or your chosen alias)
+#    - KEY_ALIAS: mehrguard (or your chosen alias)
 #    - KEY_PASSWORD: Your key password
 #
 # =============================================================================
 
 # Path to keystore file (relative to androidApp directory)
-storeFile=qrshield-release.jks
+storeFile=mehrguard-release.jks
 
 # Keystore password
 storePassword=your_keystore_password_here
 
 # Key alias
-keyAlias=qrshield
+keyAlias=mehrguard
 
 # Key password
 keyPassword=your_key_password_here
