--- a/webApp/src/jsMain/resources/manifest.json
+++ b/webApp/src/jsMain/resources/manifest.json
@@ -20,7 +20,7 @@
         "productivity",
         "developer-tools"
     ],
-    "id": "qr-shield-web-pwa",
+    "id": "mehr-guard-web-pwa",
     "icons": [
         {
             "src": "assets/icon-512.png",
