fix(desktop): Add SQLite JDBC driver for packaged app
The packaged desktop app was crashing with 'java/sql/DriverManager' error
because the SQLite JDBC driver (org.xerial:sqlite-jdbc) wasn't being
bundled. The SQLDelight sqlite-driver is just a wrapper that requires
the actual JDBC driver at runtime.

Added sqlite-jdbc dependency to:
- gradle/libs.versions.toml (new library definition)
- common/build.gradle.kts (desktopMain source set)
- desktopApp/build.gradle.kts (explicit runtime dependency)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -83,6 +83,7 @@ androidx-profileinstaller = { module = "androidx.profileinstaller:profileinstall
 # Desktop specific
 zxing-core = { module = "com.google.zxing:core", version = "3.5.2" }
 zxing-javase = { module = "com.google.zxing:javase", version = "3.5.2" }
+sqlite-jdbc = { module = "org.xerial:sqlite-jdbc", version = "3.45.3.0" }
 konsist = { module = "com.lemonappdev:konsist", version.ref = "konsist" }
 
 [plugins]
