--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:required="false" />
 
     <application
-        android:name=".QRShieldApplication"
+        android:name=".MehrGuardApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -56,7 +56,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="https" />
-                <data android:host="qrshield.app" />
+                <data android:host="mehrguard.app" />
                 <data android:pathPrefix="/scan" />
             </intent-filter>
             
@@ -65,13 +65,13 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="qrshield" />
+                <data android:scheme="mehrguard" />
             </intent-filter>
         </activity>
         
         <!-- App Widget Receiver -->
         <receiver
-            android:name=".widget.QRShieldWidgetReceiver"
+            android:name=".widget.MehrGuardWidgetReceiver"
             android:exported="true"
             android:label="@string/widget_name">
             <intent-filter>
@@ -91,7 +91,7 @@
         <!-- This service allows AndroidX to persist app locale preferences -->
         <service
             android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
-            android:enabled="false"
+            android:enabled="true"
             android:exported="false">
             <meta-data
                 android:name="autoStoreLocales"
