🚀 Release preparation v2.0.36 (KotlinConf 2025-2026 Submission)
📦 Release Changes:
- Fresh MehrGuard-2.0.36-debug.apk build (43MB)
- Added SHA-256 checksum for APK verification
- Professional RELEASE_NOTES.md with full platform details

🧹 Cleanup:
- Removed .DS_Store, .bak files, and sensitive keystore data
- Moved internal docs to docs/internal/ (PARITY_LOG, EXPORT_SURFACE, etc.)
- Removed old branding artifacts (mehr-guard-iconset/, .agent/)
- Cleaned desktopApp/bin/ generated binaries

🔧 Branding Fixes:
- Updated Theme.QRShield → Theme.MehrGuard in themes.xml
- Fixed baseline-prof.txt class references
- Updated all 18 language string files (QR-Shield Bot → Mehr Guard Bot)
- Removed TODO comments from production screens

📚 Documentation Updates:
- Updated JUDGE_QUICKSTART.md with correct APK name
- Updated README.md references
- Updated VIDEO_DEMO.md APK instructions
- Added entries to .gitignore for sensitive files

✅ All builds verified: Android, iOS, Desktop, Web JS, Web Wasm

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@ androidApp/Androidapp.txt
 .agent/artifacts/ios_ux_spec_for_android.md
 .agent/artifacts/ios_parity_implementation_log.md
 .agent/artifacts/android_gap_analysis.md
+releases/keystore-base64.txt
+*.bak
